# GCP-Playground

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: eval-gate.yml
deploy/: deploy.sh  deploy_agent_engine.py
docs/: 00-overview.md  01-scorers-catalog.md  02-llm-as-judge.md  03-agentic-eval.md  04-rag-groundedness.md  05-safety-redteam.md  06-preprod-gating.md  07-gcp-eval-mapping.md  08-market-monitoring.md
evals/: __init__.py
evals/adk/: README.md  __init__.py  eval_config.json  metrics.py  run_adk_eval.sh  test_eval_pytest.py
evals/common/: __init__.py  datasets.py  model_backend.py  results.py  text_utils.py
evals/datasets/: build_datasets.py  card_benefits.evalset.json  card_benefits_basic.test.json  pairwise_baseline.jsonl  rag_qa.jsonl  safety_redteam.jsonl
evals/gating/: __init__.py  aggregate.py  deterministic_metrics.py  gate.py  report.py  synth_data.py  test_gate.py  thresholds.yaml
evals/judges/: __init__.py  bias_mitigation.py  calibration.py  geval.py  jury.py  nli_groundedness.py  rag_metrics.py  safety_suite.py  test_judges.py
evals/vertex/: README.md  __init__.py  _client.py  computation_metrics.py  custom_autorater.py  legacy_evaltask.py  pairwise_autosxs.py  pointwise_metrics.py  rubric_adaptive.py  trajectory_eval.py
pipelines/: __init__.py  batch_evaluate_dataset.py  ci_gate.py  online_eval_agent_engine.py  run_all.py  vertex_pipeline.py
src/card_benefits_finder/: __init__.py  agent.py  config.py  local_agent.py  prompts.py  tools.py
src/card_benefits_finder/knowledge/: __init__.py  benefits_kb.md  cards.json  retriever.py
