[project]
name = "card-benefits-eval-playground"
version = "0.1.0"
description = "Comprehensive evaluation playground for pre-prod agentic deployments on GCP Agent Platform (Vertex AI) with a Google ADK credit-card benefits-finder agent."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tangerine AI Engineering" }]

# Base install stays OFFLINE-runnable: no google-adk / google-cloud-aiplatform here.
# Everything in `evals/judges`, `evals/gating`, `evals/common`, and the agent's
# offline stub path works with just these.
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# The ADK agent + Layer-1 ADK-native eval.
adk = [
    "google-adk>=1.18",
]
# Layer-2 Vertex Gen AI Evaluation Service (new GenAI Client primary).
vertex = [
    "google-cloud-aiplatform[evaluation,agent_engines]>=1.71",
    "google-genai>=1.0",
    "pandas>=2.0",
]
# GCP eval pipelines (Vertex AI Pipelines / KFP).
pipelines = [
    "kfp>=2.7",
    "google-cloud-pipeline-components>=2.14",
]
# Layer-3 heavy optional metric backends.
ragas = ["ragas>=0.2", "datasets>=2.0"]
safety = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
# Direct Gemini (API-key) backend for judges/agent without Vertex.
gemini = ["google-genai>=1.0"]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

# Convenience: install everything for a full live-GCP workstation.
all = [
    "card-benefits-eval-playground[adk,vertex,pipelines,ragas,safety,gemini,dev]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals", "src"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.card_benefits_eval]
# Single knob read by config.py when EVAL_BACKEND env var is unset.
default_backend = "stub"
